# tiny-lang

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Readme.md  break  build-stdlib.sh  compile-test.sh  cond1  first.ok  first.tl  gen-tests.sh  install-stdlib.sh  install.sh  license_header.txt  llir.sh  test.sh  test2.sh
backend/: CMakeLists.txt
backend/llvm/: Builder.cpp  CMakeLists.txt  Compiler.cpp  Compiler.hpp  Flow.cpp  main.cpp
backend/vm/: CMakeLists.txt  main.cpp
compiler/: Builder.cpp  CMakeLists.txt  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp  Variable.cpp
compiler/LLIR/: Builder.cpp  CMakeLists.txt  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp
compiler/LLVM/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp  Variable.cpp
doc/: grammar.txt  lex.txt  stdlib.txt
examples/: cat.tl  math_practice.tl  scanner.ok  vecadd.ok
frontend/: CMakeLists.txt  ast.hpp
frontend/ast/: Expression.hpp  Global.hpp  Statement.hpp  Types.hpp
frontend/debug/: AstDebug.cpp  AstDebug.hpp  LexDebug.cpp  Unparse.cpp  Unparse.hpp
frontend/error/: Manager.cpp  Manager.hpp
frontend/lex/: Lex.cpp  Lex.hpp
frontend/parser/: Expression.cpp  Flow.cpp  Function.cpp  Parser.cpp  Parser.hpp  Structure.cpp  Variable.cpp
frontend/preproc/: Preproc.cpp  Preproc.hpp
ide/: CMakeLists.txt
ide/lib/: CMakeLists.txt  highlighter.cpp  highlighter.hpp  repository.cpp  repository.hpp  syntax.qrc
ide/lib/data/syntax/: orka.xml  test.xml
ide/lib/data/theme/: default.xml  kate.xml
ide/src/: CMakeLists.txt  actions.cpp  actions.hpp  editor.cpp  editor.hpp  icons.qrc  main.cpp  statusbar.cpp  statusbar.hpp  toolbar.cpp  toolbar.hpp  window.cpp  window.hpp
ide/src/menubar/: edit_menu.cpp  edit_menu.hpp  file_menu.cpp  file_menu.hpp  help_menu.cpp  help_menu.hpp
lib/: CMakeLists.txt  fs.cpp  io.cpp  str.cpp
lib/base/corelib/: io.c  str.c  sys.c  syscall_x86.asm
lib/base/stdlib/: io.c
lib/base/stdlib/include/std/: io.oh
lib/clib/: CMakeLists.txt  io.cpp  mem.cpp  strutils.cpp
lib/include/std/: fs.th  io.th
llir/: CMakeLists.txt  Readme.md
llir/src/: CMakeLists.txt  amd64.cpp  amd64.hpp  irbuilder.cpp  irbuilder.hpp  llir.hpp  llir_operand.hpp  print.cpp  transform.cpp  x86ir.cpp  x86ir.hpp
llir/test/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
src/: CMakeLists.txt  llir_main.cpp  main.cpp
src/ast/: AstDebug.cpp  Expression.hpp  Global.hpp  Statement.hpp  Types.hpp  ast.cpp  ast_builder.cpp  ast_builder.hpp  astdot.cpp
src/compiler/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp  Variable.cpp
src/compiler/LLIR/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp
src/debug/: AstDebug.cpp
src/lex/: Lex.C  Lex.cpp  lex.py
src/parser/: Expression.cpp  Flow.cpp  Function.cpp  Parser.cpp  Parser.hpp  Structure.cpp  Variable.cpp
src/preproc/: Preproc.cpp
test/array/: array_func1.ok  char_array1.ok  int64_array1.ok  int64_array2.ok  int_array1.ok  int_array2.ok  sizeof1.ok  str_array1.ok  str_array2.ok  uint64_array1.ok  uint64_array2.ok  uint_array1.ok  uint_array2.ok
test/basic/: bitwise1.ok  bool1.ok  byte1.ok  byte1.tl  char1.ok  const1.ok  first.ok  int64_1.ok  math1.ok  mod1.tl  neg1.ok  op_pred.ok  short1.ok  string1.ok  ubyte1.ok  uint1.ok  uint64_1.ok  ushort1.ok
test/class/: class1.ok  class2.ok  class3.ok  class4.ok  extend1.ok
test/cond/: cond1.ok  cond2.ok  cond3.ok  cond4.ok  cond_byte.ok  cond_int64.ok  cond_short.ok  cond_ubyte.ok  cond_uint64.ok  cond_ushort.ok
test/enum/: enum1.ok
test/float/: f32_cond1.ok  f32_cond2.ok  f32_cond3.ok  f32_cond4.ok  f32_cond5.ok  f32_cond6.ok  f32_math1.ok  f32_math2.ok  f64_math1.ok  f64_math2.ok  f64_math3.ok
test/func/: call1.ok  func_syntax_all.ok
test/loop/: break.ok  continue.ok  for1.ok  forall1.ok  nested1.ok  nested2.ok  nested3.ok  repeat1.ok  step1.ok  while1.ok
test/str/: str1.ok
test/struct/: struct1.ok  struct2.ok  struct3.ok  struct4.ok
test/syntax/: comma_var1.ok  parens1.tl
test2/array/: array_func1.cpp  char_array1.cpp  int64_array1.cpp  int64_array2.cpp  int_array1.cpp  int_array2.cpp  str_array1.cpp  uint64_array1.cpp  uint64_array2.cpp
test2/basic/: bitwise1.cpp  bool1.cpp  byte1.cpp  char1.cpp  const1.cpp  first.cpp  int64_1.cpp  math1.cpp  neg1.cpp  op_pred.cpp  short1.cpp  ubyte1.cpp  uint1.cpp  uint64_1.cpp  ushort1.cpp
test2/basic1/: first.cpp  first.tl  ret1.cpp  ret1.tl
